--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ pycparser==2.22
 python-dotenv==1.0.1
 requests==2.31.0
 six==1.16.0
+tenacity==8.5.0
 typing_extensions==4.11.0
 urllib3==1.26.18
 Werkzeug==3.0.2
