--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,6 @@ typing_extensions==4.11.0
 urllib3==1.26.18
 Werkzeug==3.0.2
 yarl==1.9.4
-spacy==3.7
+spacy==3.7.5
 nltk==3.8.1
-fuzzywuzzy==0.18.0
-python-Levenshtein==0.21.1
+rapidfuzz==2.13.4
