--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ botframework-streaming==4.15.0
 certifi==2024.2.2
 cffi==1.16.0
 charset-normalizer==3.3.2
+fuzzywuzzy==0.18.0
 idna==3.7
 jsonpickle==1.4.2
 multidict==6.0.5
